2019-1/231/users/4339/executions/1678_1390.log
== TEST (2019-04-16 18:09:13) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo=consumo*1.20
consumocliente=25+(consumo*1,40)

if (consumo=< 100):
	print(round(clienteconsumo),2)
	
else
  print(round(consumocliente),2)
-- ERROR:
File "XXXX", line 6
    if (consumo=< 100):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:20) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo=consumo*1.20
consumocliente=25+(consumo*1,40)

if (consumo =< 100):
	print(round(clienteconsumo),2)
	
else
  print(round(consumocliente),2)
-- ERROR:
File "XXXX", line 6
    if (consumo =< 100):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:38) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo=consumo*1.20
consumocliente=25+(consumo*1,40)

if (consumo => 100):
	print(round(clienteconsumo),2)
	
else
  print(round(consumocliente),2)
-- ERROR:
File "XXXX", line 6
    if (consumo => 100):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:09:59) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo=consumo*1.20
consumocliente=25+(consumo*1,40)

if (consumo == 100):
	print(round(clienteconsumo),2)
	
else
  print(round(consumocliente),2)
-- ERROR:
File "XXXX", line 9
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:10:11) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo=consumo*1.20
consumocliente=25+(consumo*1,40)

if (consumo == 100):
	print(round(clienteconsumo),2)
	
else:
  
   print(round(consumocliente),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    consumocliente=25+(consumo*1,40)
TypeError: unsupported operand type(s) for +: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:11:15) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo=consumo*1.20
consumocliente=25+(consumo*1,40)

if (consumo == 100):
	print(input(round(clienteconsumo),2))
	
else:
  
   print(input(round(consumocliente),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    consumocliente=25+(consumo*1,40)
TypeError: unsupported operand type(s) for +: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:11:50) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (25+(consumo*1,40))

if (consumo == 100):
	print(input(round(clienteconsumo),2))
	
else:
  
   print(input(round(consumocliente),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    consumocliente= (25+(consumo*1,40))
TypeError: unsupported operand type(s) for +: 'int' and 'tuple'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:13:26) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(input(round(clienteconsumo),2))
	
else:
  
   print(input(round(consumocliente),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(input(round(consumocliente),2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:13:57) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo),2)
	
else:
  
   print(input(round(consumocliente),2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    print(input(round(consumocliente),2))
TypeError: input expected at most 1 arguments, got 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:14:13) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	
else:
  
   print(input(round(consumocliente,2))
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:14:27) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	
else:
  
   print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:14:35) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	
else:
  print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:14:40) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	
else:
   print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:14:45) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	
else:
   
			print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:01) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
   
    print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:21) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
   
    print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:35) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else
   
    print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:41) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
   
    print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:51) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
    print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:55) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
   print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:15:59) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
  print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:16:02) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
 print(round(consumocliente,2)
-- EXECUTION TIME:
0.145643
-- ERROR:
  File "/home/codebench/codes/1678/1390/main.py", line 10
    else:
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:05) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
 print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:10) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
   
			print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:30) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else print(round(consumocliente,2):
-- ERROR:
File "XXXX", line 10
    else print(round(consumocliente,2):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:44) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else
	print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:16:51) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
	print(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:17:13) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
	print(round(consumocliente)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:17:28) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
	print(input(round(consumocliente,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:17:43) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

else:
	
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:17:47) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)
	

-- ERROR:
File "XXXX", line 9
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:18:21) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

clienteconsumo= (consumo*1.20)
consumocliente= (consumo*1.40)+25

if (consumo == 100):
	print(round(clienteconsumo,2)

else:
	
   print()
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:37) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	print(round(cli,2)

else:
	
   print(round(cons,2))
-- ERROR:
File "XXXX", line 9
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:46) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)

else:
	
   print(round(cons,2))
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:19:53) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)

else
	
   print(round(cons,2))
-- ERROR:
File "XXXX", line 10
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:09) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)

else
	
   print(round(cons,2))
-- ERROR:
File "XXXX", line 10
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:20:17) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)

else:
	
   print(round(cons,2))
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:21:49) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)

else:
	
   print(round(cons,2))
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:18) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)

else:
	
   print(round(cons,2)
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:22:37) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)

else:
	
   print(round(cons,2))
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:38:49) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)

else:
	
   print(round(cons,2))
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:01) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)


-- ERROR:
File "XXXX", line 10
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:39:19) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo == 100):
	
	print(round(cli,2)

else:
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:43) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo =< 100):
	
	print(round(cli,2)

else:
			print(round(cons,2))
-- ERROR:
File "XXXX", line 6
    if (consumo =< 100):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:40:50) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= (consumo*1.40)+25

if (consumo <= 100):
	
	print(round(cli,2)

else:
			print(round(cons,2))
-- ERROR:
File "XXXX", line 10
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:24) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo*1.40)+25)

if (consumo == 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- OUTPUT:
95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:36) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo*1.40)+25)

if (consumo == 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- OUTPUT:
95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:42:39) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo*1.40)+25)

if (consumo == 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- EXECUTION TIME:
0.130859
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
95.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
193.0
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:
303.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:42:59) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo*1.40)+25)

if (consumo => 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- ERROR:
File "XXXX", line 6
    if (consumo => 100):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:08) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo*1.40)+25)

if (consumo >= 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- OUTPUT:
95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:43:20) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo*1.40)+25)

if (consumo >= 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- OUTPUT:
95.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:44:28) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo+25)*1.40)

if (consumo >= 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- OUTPUT:
105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:45:48) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo+25)*1.40)

if (consumo >= 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- OUTPUT:
105.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 18:45:51) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo+25)*1.40)

if (consumo >= 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- EXECUTION TIME:
0.153177
-- TEST CASE 1:
---- input:
50
---- correct output:
60.0
---- user output:
105.0
-- TEST CASE 2:
---- input:
120
---- correct output:
193.0
---- user output:
144.0
-- TEST CASE 3:
---- input:
199

---- correct output:
303.6
---- user output:
238.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 18:49:32) 
-- CODE:
consumo= float(input("quantidade ded minutos?"))

cli= (consumo*1.20)
cons= ((consumo+25)+(consumo-100)*1.40)

if (consumo >= 100):
	print(round(cli,2))

else:
	print(round(cons,2))
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
